[package]
name = "jeopardy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
futures-util = "0.3.25"
opentelemetry = "0.25"
opentelemetry-otlp = { version = "0.25", features = ["default"] }
opentelemetry_sdk = { version = "0.25", features = ["rt-tokio"] }
opentelemetry-semantic-conventions = "0.25"
opentelemetry-stdout = { version = "0.25", features = ["trace"] }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.23.0", features = ["full"] }
tokio-stream = "0.1.11"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-opentelemetry = "0.26"
warp = "0.3.3"
bytes = "1.10.1"
